Poly code tweaks